bat.bool1.in1020.In1020.scala.error
Compilation error:
In1020:2: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
  if ((a<=20 && a=>10) && (b>=10 &&b<=20) {
             ^In1020:5: error: ')' expected but 'return' found.
  return false
  ^